Implement frontend and backend init